frontend/test/should_fail/matchclassimplementsdefnondef_003.grg
#using "matchclassmodel.gm"

test t(var v:int) implements shared
{
}

match class shared
{
	def var v:int;
}
